hphp/test/slow/parser/php-reserved-name-self-1.php.expectf
Fatal error: Cannot use 'Self' as class name as it is reserved in %s on line 3
